# bookstream-platform

./: .env.example  .gitignore  README.md  package.json
.github/workflows/: ci-cd.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/src/: main.py
apps/api/src/alembic/: env.py
apps/api/src/api/v1/endpoints/: __init__.py  auth.py  books.py  reading.py  users.py
apps/api/src/core/: config.py  events.py  logging.py  security.py
apps/api/src/crud/: __init__.py  base.py  book.py  user.py
apps/api/src/db/: session.py
apps/api/src/exceptions/: base.py
apps/api/src/models/: __init__.py  analytics.py  book.py  library.py  notification.py  reading.py  social.py  user.py
apps/api/src/schemas/: __init__.py  analytics.py  book.py  common.py  library.py  notification.py  reading.py  social.py  user.py
apps/api/src/services/: __init__.py  auth.py  cache.py  ebook.py  email.py  storage.py
apps/api/src/workers/: celery_app.py  tasks.py
apps/web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(main)/: layout.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/layout/: Sidebar.tsx  TopBar.tsx
apps/web/src/components/reader/: HighlightPopover.tsx  ReaderSearch.tsx  ReaderSettings.tsx  ReaderSidebar.tsx  ReaderToolbar.tsx  TableOfContents.tsx
apps/web/src/lib/: api.ts
apps/web/src/stores/: auth.ts  reader.ts  ui.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
infra/docker/: docker-compose.yml
infra/nginx/: nginx.conf
(+2 files in other folders)
